add_subdirectory(ast)
add_subdirectory(content)
add_subdirectory(ecs)
add_subdirectory(input)
add_subdirectory(io)
add_subdirectory(libold)
add_subdirectory(log)
add_subdirectory(math)
add_subdirectory(program)
add_subdirectory(system)
add_subdirectory(test)
add_subdirectory(text)
add_subdirectory(utility)
add_subdirectory(vfs)
