add_library(libold STATIC
    base/utility/timestamp_factory.cpp
    base/utility/presenter.cpp
    base/utility/time_span.cpp
    base/utility/game_loop.cpp
    base/utility/timestamp.cpp
    base/utility/randomizer.cpp
    base/utility/time.cpp
    base/input/input_adapter.cpp
    base/application_presenter.cpp
    base/view.cpp
    base/text/token.cpp
    base/text/tokenizer.cpp
    base/events/terminated.cpp
    base/events/exiting.cpp
    base/events/exit.cpp
    base/events/resized.cpp
    base/events/window_focus.cpp
    base/events/print.cpp
    base/events/destroyed.cpp
    base/place/presenter.cpp
    base/content/text_loader.cpp
    base/content/loaders/sound_loader.cpp
    base/content/loaders/shader_loader.cpp
    base/content/loaders/shader_program_loader.cpp
    base/content/assets/shader.cpp
    base/content/assets/shader_program.cpp
    base/content/assets/sound.cpp
    base/graphics/default_render_target.cpp
    base/graphics/render_target.cpp
    base/graphics/depth_render_target.cpp
    base/graphics/texture_render_target.cpp
    content/master_colormap.cpp
    content/register_legacy_loaders.cpp
    content/loaders/animation_loader.cpp
    content/loaders/level_loader.cpp
    content/loaders/soundclass_loader.cpp
    content/loaders/puppet_loader.cpp
    content/loaders/sprite_loader.cpp
    content/loaders/model_loader.cpp
    content/assets/model.cpp
    content/assets/puppet.cpp
    content/assets/puppet_submode.cpp
    content/assets/animation.cpp
    content/assets/template.cpp
    content/assets/sprite.cpp
    content/assets/level.cpp
    content/assets/soundclass.cpp
    )

target_link_libraries(libold
    boost
    cog-compiler
    cog-vm
    jk-content
    jk-vfs
    log
    program
    sfml
    text
    utility
    )
